Add EnableWindowsTargeting to enable building .NET Framework libs on Linux and Mac

--- a/Source/Directory.Build.props
+++ b/Source/Directory.Build.props
@@ -4,4 +4,7 @@
     <PackageReference Include="DotNet.ReproducibleBuilds" Version="1.1.1" PrivateAssets="All"/>
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="All" />
   </ItemGroup>
+  <PropertyGroup>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
+  </PropertyGroup>
 </Project>
