Pull out common project properties to Directory.Build.props

--- a/Source/Directory.Build.props
+++ b/Source/Directory.Build.props
@@ -5,6 +5,9 @@
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="All" />
   </ItemGroup>
   <PropertyGroup>
+    <Copyright>Copyright (c) 2014-2022 OxyPlot Contributors</Copyright>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/oxyplot/oxyplot.git</RepositoryUrl>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
   </PropertyGroup>
 </Project>
