--- a/Source/OxyPlot.Core.Drawing/OxyPlot.Core.Drawing.csproj
+++ b/Source/OxyPlot.Core.Drawing/OxyPlot.Core.Drawing.csproj
@@ -2,21 +2,12 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <Description>OxyPlot is a plotting library for .NET. This is package contains the Core.Drawing extensions.</Description>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <Copyright>Copyright (c) 2014 OxyPlot contributors</Copyright>
-        <PackageProjectUrl>https://oxyplot.github.io/</PackageProjectUrl>
-        <PackageIcon>OxyPlot_128.png</PackageIcon>
         <PackageTags>plotting plot charting chart</PackageTags>
-        <RepositoryType>git</RepositoryType>
-        <RepositoryUrl>https://github.com/oxyplot/oxyplot.git</RepositoryUrl>
-        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <DefineConstants>OXYPLOT_COREDRAWING</DefineConstants>
     </PropertyGroup>
-    <ItemGroup>
-        <None Include="..\..\Icons\OxyPlot_128.png" Pack="true" PackagePath="\" />
-    </ItemGroup>
     <ItemGroup>
         <Compile Include="..\OxyPlot.WindowsForms\DrawingConverterExtensions.cs" />
         <Compile Include="..\OxyPlot.WindowsForms\ExporterExtensions.cs" />
